overflow issue fixes

--- a/src/components/topDestinations/TopDestinations.module.scss
+++ b/src/components/topDestinations/TopDestinations.module.scss
@@ -69,7 +69,7 @@
       .card {
         flex: 1 1 100%;
         .image {
-            width: 600px;
+            width: 100%;
             height: 600px;
             object-fit: cover;
           }
@@ -79,7 +79,7 @@
     @media (max-width: 500px) {
       .card {
         .image {
-            height: 400px;
+            width:100%;
             height: 400px;
           }
       }
